--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -14,12 +14,17 @@
     "@dapp-starter/contracts": "link:./packages/contracts",
     "@mainnet-cash/bcmr": "^2.7.24",
     "blockies": "^0.0.2",
+    "bufferutil": "^4.0.9",
     "cashscript": "^0.12.0",
+    "google-auth-library": "^9.6.3",
+    "googleapis": "^144.0.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.1",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "utf-8-validate": "^6.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
