--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -18,6 +18,7 @@
     "cashscript": "^0.12.0",
     "google-auth-library": "^9.6.3",
     "googleapis": "^144.0.0",
+    "jsonwebtoken": "^9.1.2",
     "mongodb": "^7.0.0",
     "next": "16.0.1",
     "qrcode.react": "^4.2.0",
